--- a/src/App.css
+++ b/src/App.css
@@ -79,15 +79,18 @@ img#homeImg {
 }
 
 
-/* #container {
-  position: relative;
+/* div#container {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
 } */
 
 .product-svg {
   position: absolute;
   top: 0;
   left: 0;
-  width: 100%;
+  max-width: 750px;
+  max-height: 750px;
   z-index: -1;
   mix-blend-mode: multiply;
 }
@@ -96,7 +99,8 @@ img#homeImg {
   position: absolute;
   top: 0;
   left: 0;
-  width: 100%;
+  max-width: 750px;
+  max-height: 750px;
   z-index: -2;
   height: auto;
 }
@@ -135,3 +139,4 @@ path#_Laces_ {
 }
 
 /* ========= COLOR PALLET ========== */
+
