--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,9 @@
 .App {
   text-align: center;
+  /* background-color: rgb(8, 30, 61); */
+  /* background-image: url("./assets/cloudsBackground.gif");
+  background-repeat: no-repeat; */
+  /* background-color: transparent; */
 }
 
 .App-logo {
@@ -31,27 +35,32 @@
 /* ========= NAVBAR STYLING ========== */
 
 .App nav {
-  background-color: rgb(8, 30, 61);
+  top: 0px;
+  left: 0px;
 }
 
 .App nav ul {
   margin: 0;
   padding: 0;
+  font-family: 'Righteous';
 }
 
 .App nav ul a {
-  color: white;
+  color: rgb(8, 30, 61);
   font-size: 1.5em;
   text-decoration: none;
   padding: 1em;
   display: inline-flex;
 }
 
+.App nav ul a:hover {
+  font-style: italic;
+  color:rgb(240, 227, 128);
+}
+
 .App nav ul img {
   height: 5em;
   background-color: rgb(8, 30, 61);
-  display: inline-block;
-
 }
 
 /* ========= HOME PAGE ========== */
@@ -62,20 +71,45 @@ img#homeImg {
 
 /* ========= SELECT SHOE PART ========== */
 
+#designScreen {
+  height: 800px;
+  z-index: -5;
+}
+
+.shoePart {
+  height: 90px;
+  width: 90px;
+  display: inline-block;
+  font-family: 'Righteous';
+  margin: 3px;
+}
+
+/* .shoePart:hover {
+  background-color: rgb(240, 227, 128);
+  border: solid 2px black;
+  box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.3);
+  font-style: italic;
+} */
+
 #selectShoePart {
   float: left;
-  width: 20%;
+  width: 300px;
+  margin-top: 100px;
+  margin-left: 20px;
 }
 
 #selectShoePart div {
-  height: 3em;
-  border: solid 2px lightgray;
+  border: solid 2px rgb(255, 255, 255);
+  border-radius: 12px;
   text-align: center;
+  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.3);
 }
 
 #selectShoePart div:hover {
-  background-color: lightcoral;
+  background-color: rgb(240, 227, 128);
   border: solid 2px black;
+  box-shadow: 7px 7px 7px rgb(0, 0, 0);
+  font-style: italic;
 }
 
 div#container {
@@ -84,7 +118,9 @@ div#container {
   position: absolute;
   left: 25%;
   top: 15%;
-  border: solid 1px black;
+  /* border: solid 1px black; */
+  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.3);
+  z-index: 2;
 }
 
 .product-svg {
@@ -93,7 +129,7 @@ div#container {
   left: 0;
   max-width: 750px;
   max-height: 750px;
-  z-index: -1;
+  z-index: 1;
   mix-blend-mode: multiply;
 }
 
@@ -103,41 +139,56 @@ div#container {
   left: 0;
   max-width: 750px;
   max-height: 750px;
-  z-index: -2;
+  z-index: 0;
   height: auto;
+  /* box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.3); */
 }
 
-path#_Laces_ {
-  position: relative;
-  top: 500px;
-  left: 0;
-  width: 100%;
-  z-index: 1;
-  mix-blend-mode: multiply;
-  display: inline-block;
-}
-
-
-
-#_Swoosh_ {
-  fill: #DBED64;
-}
-
-.colors {
-  display: flex;
+.colorContainer {
   position: fixed;
   top: 15em;
   right: 2em;
+  z-index: 3;
+  display: inline-block;
+  margin: 3px;
 }
 
 .color {
-  height: 36px;
-  width: 36px;
+  height: 60px;
+  width: 60px;
   margin-left: 0.5em;
-  border-radius: 18px;
+  /* border-radius: 18px; */
   box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.3);
-  border: 2px solid #aaa;
+  border: 2px solid rgb(157, 157, 157);
   cursor: pointer;
+  z-index: 3;
+}
+
+.color:hover {
+  border: 4px solid rgb(255, 255, 255);
+}
+
+#saveAsNfk {
+  width: 200px;
+  height: 50px;
+  margin-top: 600px;
+  position: absolute;
+  left: 75px;
+  font-size: 20px;
+  font-family: 'Righteous';
+  color:rgb(0, 0, 0);
+  background-color:rgb(64, 169, 102);
+  border: 2px solid rgb(255, 255, 255);
+  border-radius: 10px;
+  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.3);
+  z-index: 4;
+}
+
+#saveAsNfk:hover {
+  background-color:rgb(53, 140, 85);
+  border: solid 2px black;
+  box-shadow: 7px 7px 7px rgb(0, 0, 0);
+  font-style: italic;
 }
 
 /* ========= COLOR PALLET ========== */
@@ -147,7 +198,7 @@ div.shoe-card {
   width: 25%;
   height: 400px;
   margin: 2em;
-  border: solid 1px black;
+  /* border: solid 2px rgb(255, 255, 255); */
 }
 
 div.shoe-card-img {
@@ -161,7 +212,9 @@ div.shoe-card-img img {
   position: absolute;
   top: 0;
   left: 20%;
-  z-index: -2;
+  z-index: 0;
+  border: solid 2px rgb(255, 255, 255);
+
 }
 
 /* div.shoe-card-img div#container,
