--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,7 @@
 }
 
 .App-logo {
+  
   height: 40vmin;
   pointer-events: none;
 }
@@ -31,27 +32,34 @@
 /* ========= NAVBAR STYLING ========== */
 
 .App nav {
-  background-color: rgb(8, 30, 61);
+  background-color: rgb(8, 35, 61);
 }
 
 .App nav ul {
   margin: 0;
   padding: 0;
+  
 }
 
 .App nav ul a {
-  color: white;
-  font-size: 1.5em;
+  color: rgb(129, 199, 222);
+  font-size: 1.66em;
   text-decoration: none;
-  padding: 1em;
-  display: inline-flex;
+  padding: 1.2em;
+  text-align: justify;
+  display: inline-block;
+  
 }
 
 .App nav ul img {
-  height: 5em;
+  height: 3.7em;
+  float: left;
   background-color: rgb(8, 30, 61);
   display: inline-block;
-
+  border: none;
+  padding: .7em;
+  
+  /* width: 12.5%; */
 }
 
 /* ========= HOME PAGE ========== */
