--- a/src/App.css
+++ b/src/App.css
@@ -161,11 +161,13 @@ div#container {
   z-index: 3;
   display: inline-block;
   margin: 3px;
+  width: 300px;
 }
 
 .color {
   height: 60px;
   width: 60px;
+  margin: 3px;
   margin-left: 0.5em;
   /* border-radius: 18px; */
   box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.3);
