--- a/src/App.css
+++ b/src/App.css
@@ -48,6 +48,12 @@
   height: 5em;
 }
 
+@keyframes floating {
+  0% { transform: translate(0,  0px); }
+  50%  { transform: translate(0, 4px); }
+  100%   { transform: translate(4, 0px); }   
+}
+
 .App nav ul a {
   color: rgb(8, 30, 61);
   font-size: 1.5em;
@@ -68,6 +74,10 @@
   -webkit-text-stroke: 1px rgb(8, 30, 61);
   text-decoration: underline;
   text-shadow: 10px 10px 10px rgb(0, 0, 0);
+  animation-name: floating;
+  animation-duration: 3s;
+  animation-iteration-count: infinite;
+  animation-timing-function: ease-in-out;
 }
 
 .App nav ul img {
@@ -116,7 +126,9 @@ img#homeImg {
   border: solid 2px rgb(255, 255, 255);
   border-radius: 12px;
   text-align: center;
+  line-height: 50px;
   box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.3);
+  text-transform: uppercase;
 }
 
 #selectShoePart div:hover {
@@ -124,12 +136,19 @@ img#homeImg {
   border: solid 2px black;
   box-shadow: 7px 7px 7px rgb(0, 0, 0);
   font-style: italic;
+  transform: scale(1.1);
 }
 
 #selectShoePart h3 {
-  font-family: 'Righteous';
+  font-family: futura-pt-condensed, sans-serif;
+  font-weight: 700;
   font-style: italic;
-  font-size: 1.2em;
+  font-size: 1.5em;
+  text-transform: uppercase;
+  animation-name: floating;
+  animation-duration: 3s;
+  animation-iteration-count: infinite;
+  animation-timing-function: ease-in-out;
 }
 
 div#container {
@@ -187,7 +206,8 @@ div#container {
 }
 
 .color:hover {
-  border: 4px solid rgb(255, 255, 255);
+  border: 2px solid rgb(255, 255, 255);
+  transform: scale(1.1);
 }
 
 #saveAsNfk {
