--- a/src/App.css
+++ b/src/App.css
@@ -39,7 +39,7 @@
   /* background-color: rgb(8, 35, 61); */
   top: 0px;
   left: 0px;
-  /* height: 50 px; */
+  max-height: 100px;
 }
 
 .App nav ul {
@@ -49,23 +49,33 @@
 }
 
 @keyframes floating {
-  0% { transform: translate(0,  0px); }
-  50%  { transform: translate(0, 4px); }
-  100%   { transform: translate(4, 0px); }   
+  0% {
+    transform: translate(0, 0px);
+  }
+
+  50% {
+    transform: translate(0, 4px);
+  }
+
+  100% {
+    transform: translate(4, 0px);
+  }
 }
 
 .App nav ul a {
   color: rgb(8, 30, 61);
-  font-size: 1.5em;
   text-decoration: none;
-  padding-left: 2em;
-  /* padding-top: 0.1em; */
+  padding: 1em 2.5em;
   text-align: justify;
   display: inline-block;
   font-size: 1.66em;
   font-family: 'Righteous';
-  margin-top: -1em;
-  margin-bottom: 3em;
+  margin: 0;
+  /* font-size: 1.5em; */
+  /* margin-top: 0.5em; */
+  /* margin-bottom: 0.5em; */
+  /* padding-left: 2em;
+  padding-top: 1em; */
 }
 
 .App nav ul a:hover {
@@ -81,7 +91,8 @@
 }
 
 .App nav ul img {
-  display: flex;
+  /* display: flex; */
+  float: left;
   top: 0;
   left: 0;
   height: 100%;
@@ -91,6 +102,7 @@
 
 img#homeImg {
   width: 100%;
+  /* margin-top: 3em; */
 }
 
 /* ========= SELECT SHOE PART ========== */
@@ -339,4 +351,65 @@ div#tempimgcontainer {
   top: 1000px;
   border: solid 1px black;
   height: 1000px;
+}
+
+
+/* ========== MEDIA QUERY =========== */
+
+@media only screen and (max-width: 1325px) {
+  .App nav ul a {
+    padding: 1em 1em;
+  }
+}
+
+@media only screen and (max-width: 1000px) {
+  #selectShoePart {
+    margin: 0;
+    float: left;
+    width: 100%;
+  }
+
+  #saveAsNfk {
+    margin: 0 20%;
+    position: absolute;
+    /* left: 75px; */
+    top: 750px;
+
+  }
+
+  .colorContainer {
+    position: absolute;
+    width: 100%;
+    top: 60%;
+
+    right: 2em;
+    z-index: 3;
+    display: inline-block;
+    margin: 3px;
+
+  }
+
+  div#container {
+    float: left;
+    height: 100%;
+    width: 100%;
+    position: absolute;
+    left: 0;
+    top: 27.5%;
+  }
+
+  #shoe {
+    float: left;
+    position: absolute;
+    height: 75%;
+  }
+
+  .product-svg {
+    height: 75%;
+  }
+
+  /* Don't display Home a tag */
+  .App nav ul img+a {
+    display: none;
+  }
 }
