--- a/src/App.css
+++ b/src/App.css
@@ -102,7 +102,11 @@
 
 img#homeImg {
   width: 100%;
-  /* margin-top: 3em; */
+  height: 100%;
+  background-image: url("./assets/choose-your-element-background.gif");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
 }
 
 /* ========= SELECT SHOE PART ========== */
